Add a footer and pretty it up a bit

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle</title>
+    <title>Wordle Solver</title>
   </head>
+
   <body>
     <div id="root"></div>
+    <footer>
+      <hr>
+      <center>
+        &copy; 2022 <a href="https://arkinsolomon.net">Arkin Solomon</a>. No affiliation with <a
+          href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> or the <a href="https://www.nytimes.com">New
+          York Times</a>. View the source on <a href="https://github.com/ArkinSolomon/wordle-solver">GitHub</a>.
+      </center>
+    </footer>
   </body>
+
 </html>
